tests/reference/asr-test_zero_division3-29efb9e.stderr
semantic error: division by zero is not allowed
 --> tests/errors/test_zero_division3.py:3:13
  |
3 |     print(i/0)
  |             ^ division by zero


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
